# barbarian

./: .gitignore  AppImageBuilder.yml  README.MD  build_nuitka.py  img_crop.py  make_ss.py  pyproject.toml  requirements.txt
barbariantuw/: __init__.py  __main__.py  ai.py  anims.py  core.py  scenes.py  settings.py  sprites.py  spritesheets.py  viewer.py
pygbag/: main.py
readme/: barbarian.anim-viewer.demo.webm  barbarian.battle.demo.webm
src/: anims.py  barbarianAMIGA.bas  config.py  main.py  qwe.bas  scenes.py  settings.py  sprites.py  viewer.py
src/scene/: battle.py  viewer.py
src/sprite/: animated.py  barbarian.py  common.py
